# stationeers-companion

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements.txt
.claude/: config.yaml  conventions.md  settings.json
.claude/agents/: code-analyzer.md  code-debugger.md  code-documenter.md  code-generator.md  code-migrator.md  code-optimizer.md  code-refactorer.md  code-tester.md  code-validator.md  device-researcher.md  hardware-guide.md  instruction-researcher.md  pattern-finder.md  resource-curator.md
docs/logic-types/: index.md  readable.md  slots.md  writable.md
docs/reference/: external-validator.md  validation-rules.md
examples/: index.md
examples/airlocks/: README.md  gate-control.ic10  (+4 more)
guides/: README.md  airlock-resources.md  battery-resources.md  farming-hab-layout.md  filtration-resources.md  furnace-resources.md  gas-mixing-resources.md  greenhouse-resources.md  harvie-seed-fertilizer-automation.md  mining-automation-advanced.md  mining-automation-beginner.md  mining-base-design.md  mining-environment-guide.md  mining-manual-techniques.md  mining-resources.md  plant-genetics.md  rocketry-atmospheric-resources.md  rocketry-orbital-resources.md  rocketry-resources.md  solar-resources.md  temperature-resources.md  trading-resources.md
knowledge/: index.md
outputs/: CRITICAL_FIXES_REPORT.md  IMPLEMENTATION_SUMMARY.md  WEEK2_IMPLEMENTATION_REPORT.md  WEEK3_IMPLEMENTATION_REPORT.md  WEEK3_SUMMARY.md  scraper-review-report.md
tools/: __init__.py  config.py  github_scraper.py  ic10_validator.py  steam_scraper.py  wiki_scraper.py
(+270 files in other folders)
