[project]
name = "stationeers-companion"
version = "0.1.0"
description = "Personal toolkit for Stationeers IC10 programming"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "html2text>=2024.2.26",
    "pyyaml>=6.0",
    "rich>=13.7.0",
    "tree-sitter>=0.21.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["tools"]
